Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.6.0
-
None
-
Windows Vista 64 bit
Qt Quick UI running on Qt 4.8.1
-
bc5cda03e481637bd93ff61f957774e2aa4e3bf7
Description
- Open a Qt Quick UI.
I used samegame1 example. - Set a breakpoint and let the project stop there.
I have it in line 72:onClicked: console.log("This doesn't do anything yet...")
- Continue execution.
- Check "Locals and Expressions".
It shows one line:screen object Rectangle
This is grayed out and can't be expanded.
Instead, Creator should correct and complete data like it did before stopping at the breakpoint.