Inspector: Do not disable Locals and Expressions

Inspector follows a different cycle and its contents are
always valid during a debug session. Show the values in
Locals and Expressions as valid for user to interact
with them.

Task-number: QTCREATORBUG-8167

Change-Id: If2f622de5b8bf6da78571bc007efd19602a5f389
Reviewed-by: hjk <qthjk@ovi.com>
Reviewed-by: Robert Loehning <robert.loehning@digia.com>
Reviewed-by: Eike Ziller <eike.ziller@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>